--- a/02. PARTIE REGLEMENTAIRE/Article R1211-13 - 28996345.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1211-13 - 28996345.md
@@ -1,25 +1,18 @@
 # Article R1211-13
 
 Le ministre chargé des transports accuse réception de la demande mentionnée à l'article R. 1211-12 dans les sept jours
-suivant sa réception. 
-
-Lorsqu'il décide de solliciter l'avis du comité d'instruction pour la diffusion des informations ferroviaires, le ministre
-chargé des transports y procède dans le même délai.
+suivant sa réception.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2012-555 du 23 avril 2012 - art. 4, alinéas 2 et 3, paragraphe II (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R1211-12 (V)
+	  - Code des transports - art. R1211-12
