--- a/02. PARTIE REGLEMENTAIRE/Article R3120-2 - 30048395.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3120-2 - 30048395.md
@@ -1,7 +1,7 @@
 # Article R3120-2
 
-Sans préjudice de l'article R. 3122-15, la justification de l'existence de la réservation préalable mentionnée aux 1° et 3°
-du II de l'article L. 3120-2 peut être apportée au moyen d'un document écrit sur un support papier ou électronique. 
+Sans préjudice de l'article R. 3122-15, la justification de l'existence de la réservation préalable mentionnée au I et aux 1°
+et 3° du II de l'article L. 3120-2 peut être apportée au moyen d'un document écrit sur un support papier ou électronique. 
 
 Le conducteur est tenu de présenter ce justificatif à toute demande des agents chargés des contrôles. 
 
@@ -14,11 +14,11 @@ informations figurant sur ce justificatif et ses caractéristiques.
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 2
 
 	**Cite**:
 
-	  - Code des transports - art. L3120-2 (V)
-	  - Code des transports - art. R3122-15 (V)
+	  - Code des transports - art. L3120-2
+	  - Code des transports - art. R3122-15
