--- a/02. PARTIE REGLEMENTAIRE/Article R3120-7 - 30048405.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3120-7 - 30048405.md
@@ -1,29 +1,39 @@
 # Article R3120-7
 
-Nul ne peut s'inscrire à l'examen en vue d'obtenir le certificat de capacité professionnelle de conducteur d'un véhicule de
-transport public particulier si le nombre maximal de points de son permis de conduire est affecté par le délai probatoire
-prévu à l'article L. 223-1 du code de la route.
+Le respect de la condition d'aptitude professionnelle mentionnée à l'article L. 3120-2-1 est constaté par la réussite à un
+examen, propre à chacune des professions du transport public particulier de personnes. Cet examen comprend des épreuves
+écrites d'admissibilité et une épreuve pratique d'admission dont le programme et les épreuves sont définis par un arrêté du
+ministre chargé des transports et du ministre chargé de l'économie. 
 
-Pour les personnes disposant d'une expérience professionnelle de nature à les dispenser de l'obtention du certificat de
-capacité professionnelle, la vérification de la condition relative au délai probatoire du permis de conduire est effectuée
-lors de la délivrance de la carte professionnelle nécessaire à l'entrée initiale dans l'une des professions dispensant de
-certificat.
+Il est organisé dans les conditions prévues par les articles 24 à 24-2 et par le II de l'article 26 du code de l'artisanat. 
+
+Nul ne peut s'inscrire à ces examens si : 
+
+1° Il a fait l'objet, dans les dix ans qui précèdent sa demande, d'un retrait définitif de sa carte professionnelle en
+application de l'article L. 3124-11 ; 
+
+2° Il a fait l'objet, dans les cinq ans qui précèdent sa demande, d'une exclusion pour fraude lors d'une session à l'un des
+examens des professions du transport public particulier de personnes ; 
+
+3° Le délai probatoire applicable à son permis en vertu de l'article L. 223-1 du code de la route n'est pas expiré ou, le cas
+échéant, si la condition d'ancienneté prévue au 3° de l'article L. 3123-1 du présent code n'est pas remplie.
 
 **Nota:**
 
-Conformément à l'article 7 III 2° du décret n° 2014-1725 du 30 décembre  2014, entrent en vigueur à une date fixée par un
-arrêté des ministres  chargés, respectivement, de l'économie et des transports et du ministre  de l'intérieur et au plus tard
-au 1er janvier 2016, les dispositions de l'article R. 3120-7 du code des transports dans sa rédaction annexée au présent
-décret en tant qu'elles concernent les véhicules de transport avec chauffeur et les véhicules motorisés à deux ou trois
-roues.
+Conformément aux dispositions du II de l'article 14 du décret n° 2017-483 du 6 avril 2017, pendant un an à compter de la
+promulgation de la loi n° 2016-1920 du 29 décembre 2016, l'interdiction, prévue au 1° de l'article R. 3120-6 et au 3° de
+l'article R. 3120-7 du code des transports dans leur rédaction résultant respectivement des 2° et 3° de l'article 2 dudit
+décret, de disposer d'un permis de conduire encore soumis à une période probatoire n'est pas applicable aux conducteurs
+mentionnés au III de l'article 5 de cette même loi s'ils sont titulaires depuis au moins un an du permis de conduire
+correspondant à la catégorie du véhicule concerné.
+
+Les entreprises mentionnées au II du même article 5 souhaitant bénéficier des dérogations prévues au IV du même article
+joignent au dossier d'inscription prévu à l'article R. 3122-1 du code des transports une preuve de l'inscription au registre
+mentionnée à l'article L. 3113-1 du même code.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
-	**Créé par**:
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
@@ -35,6 +45,14 @@ roues.
 	  - Code des transports - art. R3120-6 (M)
 	  - Code des transports - art. R3121-17 (V)
 
+	**Modifié par**:
+
+	  - Décret n°2017-483 du 6 avril 2017 - art. 2
+
 	**Cite**:
 
-	  - Code de la route. - art. L223-1 (M)
+	  - Code de la route. - art. L223-1
+	  - Code de l'artisanat - art. 26 (V)
+	  - Code des transports - art. L3120-2-1
+	  - Code des transports - art. L3123-1
+	  - Code des transports - art. L3124-11
