--- a/02. PARTIE REGLEMENTAIRE/Article R3120-9 - 30048409.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3120-9 - 30048409.md
@@ -1,14 +1,13 @@
 # Article R3120-9
 
 L'exploitation d'un centre de formation en vue de la formation, initiale ou continue, des conducteurs des véhicules de
-transport public particulier est subordonnée à la délivrance d'un agrément par l'autorité administrative compétente. Cet
-agrément est valable cinq ans.
+transport public particulier est subordonnée à la délivrance d'un agrément par le préfet du département où est situé le
+centre de formation, ou, s'il est situé dans la commune de Paris, le préfet de police. Cet agrément est valable cinq ans.
 
-La procédure d'instruction des demandes et les conditions de délivrance de cet agrément sont définies par un arrêté des
-ministres chargés, respectivement, de l'économie et des transports et du ministre de l'intérieur, notamment en ce qui
-concerne les clauses obligatoires du règlement intérieur de l'établissement, les exigences minimales concernant la
-qualification des formateurs, les locaux, les matériels et véhicules utilisés, ainsi que le programme et le contenu des
-formations.
+La procédure d'instruction des demandes et les conditions de délivrance de cet agrément sont définies par un arrêté du
+ministre chargé des transports, notamment en ce qui concerne les clauses obligatoires du règlement intérieur de
+l'établissement, les exigences minimales concernant la qualification des formateurs, les locaux, les matériels et véhicules
+utilisés, ainsi que le programme et le contenu des formations.
 
 L'agrément peut être suspendu pour une durée maximale de six mois ou retiré par l'autorité administrative qui l'a délivré
 lorsque l'une des conditions auxquelles sa délivrance est subordonnée cesse d'être remplie.
@@ -29,10 +28,6 @@ l'article R. 212-4 du code de la route.
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
 	**Cité par**:
 
 	  - Arrêté du 2 février 2016 (V)
@@ -44,6 +39,10 @@ l'article R. 212-4 du code de la route.
 	  - Code des transports - art. R3122-14 (Ab)
 	  - Code des transports - art. R3123-1 (M)
 
+	**Modifié par**:
+
+	  - Décret n°2017-483 du 6 avril 2017 - art. 2
+
 	**Cite**:
 
-	  - Code de la route. - art. R212-4 (M)
+	  - Code de la route. - art. R212-4
