--- a/02. PARTIE REGLEMENTAIRE/Article R3121-1 - 30048421.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-1 - 30048421.md
@@ -21,18 +21,22 @@ II.-Il est, en outre, muni de :
 1° Une imprimante, connectée au taximètre, permettant l'édition automatisée d'une note informant le client du prix total à
 payer conformément aux textes d'application de l'article L. 113-3 du code de la consommation ; 
 
-2° Un terminal de paiement électronique, mentionné à l'article L. 3121-1, en état de fonctionnement et visible, tenu à la
-disposition du client, afin de permettre au prestataire de services de paiement d'accomplir l'obligation d'information prévue
-à l'article L. 314-14 du code monétaire et financier.
+2° Un terminal de paiement électronique en état de fonctionnement et visible, tenu à la disposition du client,  afin de
+permettre au conducteur d'accomplir l'obligation prévue à l'article L. 3121-11-2 et, le cas échéant, au prestataire de
+services de paiement d'accomplir l'obligation d'information prévue à l'article L. 314-14 du code monétaire et financier.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Décret n°2006-447 du 12 avril 2006 (V)
-	  - Code de la consommation - art. L113-3 (M)
-	  - Code monétaire et financier - art. L314-14 (M)
-	  - Code des transports - art. L3121-1 (V)
+	  - Décret n°2006-447 du 12 avril 2006
+	  - Code de la consommation - art. L113-3
+	  - Code monétaire et financier - art. L314-14
+	  - Code des transports - art. L3121-1
+
+	**Codifié par**:
+
+	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
@@ -43,10 +47,6 @@ disposition du client, afin de permettre au prestataire de services de paiement 
 	  - Code des transports - art. R3122-7 (V)
 	  - Code des transports - art. R3124-2 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 3
