--- a/02. PARTIE REGLEMENTAIRE/Article R3121-16 - 30048459.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-16 - 30048459.md
@@ -1,15 +1,8 @@
 # Article R3121-16
 
-Le préfet du département où est situé le ressort géographique de l'autorisation de stationnement ou, dans sa zone de
-compétence, le préfet de police est l'autorité administrative compétente pour :
-
-- délivrer le certificat de capacité professionnelle de conducteur de taxi, mentionnée au 1° de l'article L. 3121-9, et pour
-constater l'aptitude professionnelle mentionnée au 2° du même article ;
-
-- délivrer la carte professionnelle prévue à l'article L. 3121-10 et préciser le ou les départements dans lesquels le
-conducteur de taxi peut exercer sa profession ;
-
-- délivrer l'agrément des centres de formation de conducteurs de taxis conformément à l'article R. 3120-9.
+L'autorité administrative compétente pour délivrer la carte professionnelle prévue à l'article L. 3121-2-2 et préciser le ou
+les départements dans lesquels le conducteur peut exercer son activité est le préfet de département ou, dans sa zone de
+compétence, le préfet de police.
 
 **Liens relatifs à cet article**
 
@@ -17,12 +10,6 @@ conducteur de taxi peut exercer sa profession ;
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
-	**Cite**:
-
-	  - Code des transports - art. L3121-10 (V)
-	  - Code des transports - art. L3121-9 (V)
-	  - Code des transports - art. R3120-9 (V)
+	  - Décret n°2017-483 du 6 avril 2017 - art. 3
