--- a/02. PARTIE REGLEMENTAIRE/Article R3121-17 - 30048461.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-17 - 30048461.md
@@ -1,13 +1,8 @@
 # Article R3121-17
 
-Sans préjudice de l'article R. 3120-7, nul ne peut s'inscrire à l'examen en vue de la délivrance du certificat de capacité
-professionnelle de conducteur de taxi :
-
-- s'il a fait l'objet, dans les dix ans qui précèdent sa demande, d'un retrait définitif, en application de l'article L.
-3124-2, de la carte professionnelle de conducteur de taxi mentionnée à l'article L. 3121-10 ;
-
-- s'il a fait l'objet, dans les cinq ans qui précèdent sa demande, d'une exclusion pour fraude lors d'une session à l'examen
-du certificat de capacité professionnelle de conducteur de taxi.
+Tout conducteur de taxi est titulaire, lors de son entrée initiale dans la profession, d'une attestation de suivi d'une
+formation de prévention et de secours civiques de niveau 1 délivrée depuis moins de deux ans, ou d'une formation équivalente
+pour les conducteurs relevant de l'article R. 3120-8-1.
 
 **Liens relatifs à cet article**
 
@@ -15,12 +10,12 @@ du certificat de capacité professionnelle de conducteur de taxi.
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L3121-10 (V)
-	  - Code des transports - art. L3124-2 (V)
-	  - Code des transports - art. R3120-7 (V)
+	  - Code des transports - art. L3121-10
+	  - Code des transports - art. L3124-2
+	  - Code des transports - art. R3120-7
