--- a/02. PARTIE REGLEMENTAIRE/Article R3121-22 - 30048473.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-22 - 30048473.md
@@ -1,11 +1,7 @@
 # Article R3121-22
 
 Le tarif maximum d'une course de taxi est fixé par le décret n° 2015-1252 du 7 octobre 2015 relatif aux tarifs des courses
-des taxis.
-
-**Nota:**
-
-A l'article 3 du décret n° 2016-335 du 21 mars 2016, il convient de lire "Art. R3121-22" au lieu de "Art. R3131-22"
+des taxis et par les textes pris pour son application.
 
 **Liens relatifs à cet article**
 
@@ -15,8 +11,8 @@ A l'article 3 du décret n° 2016-335 du 21 mars 2016, il convient de lire "Art.
 
 	**Cite**:
 
-	  - Décret n°2015-1252 du 7 octobre 2015 (V)
+	  - Décret n°2015-1252 du 7 octobre 2015
 
 	**Modifié par**:
 
-	  - Décret n°2016-335 du 21 mars 2016 - art. 3
+	  - Décret n°2017-483 du 6 avril 2017 - art. 3
