--- a/02. PARTIE REGLEMENTAIRE/Article R3121-25 - 32278150.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-25 - 32278150.md
@@ -1,22 +1,22 @@
 # Article R3121-25
 
 Le registre national de disponibilité des taxis recense, outre les informations mentionnées au troisième alinéa de l'article
-L. 3121-11-1 qui lui sont transmises par les autorités énumérées à l'article R. 3121-4, assorties, le cas échéant, des
+R. 3121-24 qui lui sont transmises par les autorités énumérées à l'article R. 3121-4, assorties, le cas échéant, des
 caractéristiques prévues à l'article R. 3121-12, les informations mentionnées à l'article R. 3121-5. 
 
 Ces informations sont actualisées sans délai par les autorités compétentes. 
 
-Les modalités de leur transmission sont précisées par arrêté du ministre de l'intérieur.
+Les modalités de leur transmission sont précisées par arrêté du ministre chargé des transports.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2016-335 du 21 mars 2016 - art. 1
+	  - Décret n°2017-483 du 6 avril 2017 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L3121-11-1 (V)
-	  - Code des transports - art. R3121-12 (V)
-	  - Code des transports - art. R3121-4 (V)
-	  - Code des transports - art. R3121-5 (V)
+	  - Code des transports - art. R3121-12
+	  - Code des transports - art. R3121-24
+	  - Code des transports - art. R3121-4
+	  - Code des transports - art. R3121-5
