--- a/02. PARTIE REGLEMENTAIRE/Article R3121-27 - 32278154.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-27 - 32278154.md
@@ -1,20 +1,20 @@
 # Article R3121-27
 
-Le gestionnaire du registre mentionné à l'article L. 3121-11-1 peut imposer aux utilisateurs du registre le respect des
-prescriptions techniques qu'il fixe afin de préserver le bon fonctionnement opérationnel de celui-ci. 
+Le gestionnaire du registre mentionné à l'article R. 3121-24 peut imposer aux utilisateurs du registre le respect des
+prescriptions techniques qu'il fixe afin de préserver le bon fonctionnement opérationnel de celui-ci.
 
 Il définit, en outre, les modalités techniques d'accès au registre et prend toute mesure visant à éviter un usage du registre
-à d'autres fins que celles prévues à l'article L. 3121-11-1.
+à d'autres fins que celles prévues à l'article R. 3121-24.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2016-335 du 21 mars 2016 - art. 1
+	  - Décret n°2017-483 du 6 avril 2017 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L3121-11-1 (V)
+	  - Code des transports - art. L3121-11-1
 
 	**Cité par**:
 
