--- a/02. PARTIE REGLEMENTAIRE/Article R3121-29 - 32278158.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-29 - 32278158.md
@@ -4,14 +4,14 @@ Le gestionnaire du registre permet à des moteurs de recherche d'interroger à d
 données de localisation et de disponibilité des véhicules de taxis, transmises en temps réel par leurs conducteurs. 
 
 La plate-forme identifie les taxis disponibles les plus proches du client, correspondant à sa demande, dans la limite d'un
-nombre fixé par arrêté du ministre de l'intérieur, en fonction des caractéristiques du ressort géographique de l'autorisation
-de stationnement.
+nombre fixé par arrêté     du ministre chargé des transports, en fonction des caractéristiques du ressort géographique de
+l'autorisation de stationnement.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2016-335 du 21 mars 2016 - art. 1
+	  - Décret n°2017-483 du 6 avril 2017 - art. 3
 
 	**Cité par**:
 
