--- a/02. PARTIE REGLEMENTAIRE/Article R3121-33 - 32278166.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-33 - 32278166.md
@@ -1,7 +1,7 @@
 # Article R3121-33
 
 Pour les besoins de l'évaluation du fonctionnement du registre de disponibilité des taxis et de la qualité du service rendu,
-le gestionnaire du registre mentionné à l'article L. 3121-11-1 est autorisé à conserver pendant un an les informations
+le gestionnaire du registre mentionné à l'article R. 3121-24 est autorisé à conserver pendant un an les informations
 constituant des données nominatives et les informations relatives aux recherches de taxis effectuées par des clients par
 l'intermédiaire des moteurs de recherches utilisant les informations du registre. Ce délai se décompte à partir de la date du
 dernier enregistrement. 
@@ -11,10 +11,10 @@ taxis plus de deux mois.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2016-335 du 21 mars 2016 - art. 1
+	  - Décret n°2017-483 du 6 avril 2017 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L3121-11-1 (V)
+	  - Code des transports - art. R3121-24
