--- a/02. PARTIE REGLEMENTAIRE/Article R3122-12 - 30048511.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3122-12 - 30048511.md
@@ -1,20 +1,12 @@
 # Article R3122-12
 
 L'autorité administrative compétente pour délivrer la carte professionnelle de conducteur de voiture de transport avec
-chauffeur, mentionnée à l'article L. 3122-8, est le préfet du département dans lequel le demandeur a élu domicile ou, s'il a
-élu domicile dans la commune de Paris, le préfet de police. 
-
-L'autorité administrative compétente pour délivrer l'agrément des centres de formation de conducteurs de véhicule de
-transport avec chauffeur conformément à l'article R. 3120-9 est le préfet du département où se trouve le centre de formation
-ou, s'il est situé dans la commune de Paris, le préfet de police.
+chauffeur, mentionnée à l'article L. 3120-2-2, est le préfet du département dans lequel le demandeur a élu domicile ou, s'il
+a élu domicile dans la commune de Paris, le préfet de police.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
-	**Créé par**:
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
@@ -24,7 +16,11 @@ ou, s'il est situé dans la commune de Paris, le préfet de police.
 	  - Arrêté du 2 février 2016 - art. 5 (Ab)
 	  - Arrêté du 18 mars 2016 - art. 3
 
+	**Modifié par**:
+
+	  - Décret n°2017-483 du 6 avril 2017 - art. 6
+
 	**Cite**:
 
-	  - Code des transports - art. L3122-8 (V)
-	  - Code des transports - art. R3120-9 (V)
+	  - Code des transports - art. L3122-8
+	  - Code des transports - art. R3120-9
