--- a/02. PARTIE REGLEMENTAIRE/Article R3122-6 - 30048495.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3122-6 - 30048495.md
@@ -2,17 +2,13 @@
 
 Les voitures de transport avec chauffeur comportent au moins quatre et au plus neuf places, y compris celle du conducteur. 
 
-Un arrêté des ministres chargés respectivement de l'économie et des transports et du ministre de l'intérieur fixe les
-dimensions et la puissance minimales ainsi que l'ancienneté maximale des voitures de transport avec chauffeur, autres que les
-véhicules hybrides et électriques mentionnés à l'article L. 3120-5.
+Un arrêté                 du ministre chargé des transports et du ministre chargé de l'économie fixe les dimensions et la
+puissance minimales ainsi que l'ancienneté maximale des voitures de transport avec chauffeur, autres que les véhicules
+hybrides et électriques mentionnés à l'article L. 3120-5.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
-	**Créé par**:
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
@@ -23,6 +19,10 @@ véhicules hybrides et électriques mentionnés à l'article L. 3120-5.
 	  - Arrêté du 6 avril 2017 - art. 2 (V)
 	  - Code des transports - art. R3124-5 (V)
 
+	**Modifié par**:
+
+	  - Décret n°2017-483 du 6 avril 2017 - art. 5
+
 	**Cite**:
 
-	  - Code des transports - art. L3120-5 (V)
+	  - Code des transports - art. L3120-5
