--- a/02. PARTIE REGLEMENTAIRE/Article R3123-2 - 30048523.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3123-2 - 30048523.md
@@ -1,16 +1,9 @@
 # Article R3123-2
 
-Les conditions d'aptitude professionnelles mentionnées au 1° de l'article L. 3123-1 sont constatées :
-
-- soit par la réussite d'un examen dans les conditions définies par arrêté conjoint du ministre chargé de l'économie et du
-ministre de l'intérieur ;
-
-- soit par la production d'un titre délivré par un autre Etat membre de l'Union européenne ou un autre Etat partie à l'accord
-sur l'Espace économique européen ou d'un titre reconnu par l'un de ces Etats, équivalent au certificat attestant de la
-réussite à l'examen mentionné ci-dessus ;
-
-- soit par toute pièce de nature à établir une expérience professionnelle d'une durée minimale d'un an dans des fonctions de
-chauffeur professionnel de personnes, au cours des dix années précédant la demande de carte professionnelle.
+Les conditions d'aptitude professionnelle mentionnées à l'article L. 3120-2-1 peuvent être constatées par la production de
+toute pièce de nature à établir une expérience professionnelle d'une durée minimale d'un an, à temps plein ou à temps partiel
+pour une durée équivalente, dans des fonctions de conducteur professionnel de transport de personnes au cours des dix années
+précédant la demande de carte professionnelle.
 
 **Liens relatifs à cet article**
 
@@ -18,10 +11,6 @@ chauffeur professionnel de personnes, au cours des dix années précédant la de
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
-	**Cite**:
-
-	  - Code des transports - art. L3123-1 (V)
+	  - Décret n°2017-483 du 6 avril 2017 - art. 7
