--- a/02. PARTIE REGLEMENTAIRE/Article R3123-3 - 30048525.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3123-3 - 30048525.md
@@ -1,16 +1,12 @@
 # Article R3123-3
 
-Un arrêté du ministre de l'intérieur fixe les dimensions et la puissance minimales ainsi que l'ancienneté maximale des
-véhicules motorisés à deux ou trois roues utilisés pour le transport à titre onéreux de personnes, autres que les véhicules
-hybrides et électriques mentionnés à l'article L. 3120-5.
+Un arrêté     du ministre chargé des transports et du ministre chargé de l'économie fixe les dimensions et la puissance
+minimales ainsi que l'ancienneté maximale des véhicules motorisés à deux ou trois roues utilisés pour le transport à titre
+onéreux de personnes, autres que les véhicules hybrides et électriques mentionnés à l'article L. 3120-5.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
-	**Créé par**:
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
@@ -20,6 +16,10 @@ hybrides et électriques mentionnés à l'article L. 3120-5.
 	  - Arrêté du 17 mars 2015 - art. 1 (V)
 	  - Code des transports - art. R3124-9 (V)
 
+	**Modifié par**:
+
+	  - Décret n°2017-483 du 6 avril 2017 - art. 7
+
 	**Cite**:
 
-	  - Code des transports - art. L3120-5 (V)
+	  - Code des transports - art. L3120-5
