--- a/02. PARTIE REGLEMENTAIRE/Article R3123-4 - 30048527.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3123-4 - 30048527.md
@@ -1,6 +1,6 @@
 # Article R3123-4
 
-La signalétique mentionnée au 2° de l'article L. 3123-1 est définie par un arrêté du ministre de l'intérieur.
+La signalétique mentionnée au 2° de l'article L. 3123-1 est définie par un arrêté     du ministre chargé des transports.
 
 **Liens relatifs à cet article**
 
@@ -8,13 +8,13 @@ La signalétique mentionnée au 2° de l'article L. 3123-1 est définie par un a
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 7
 
 	**Cite**:
 
-	  - Code des transports - art. L3123-1 (V)
+	  - Code des transports - art. L3123-1
 
 	**Cité par**:
 
