--- a/02. PARTIE REGLEMENTAIRE/Article R3123-5 - 30048529.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3123-5 - 30048529.md
@@ -1,7 +1,7 @@
 # Article R3123-5
 
 Les véhicules motorisés à deux ou trois roues ne sont pas soumis au contrôle technique et font l'objet d'une attestation
-annuelle d'entretien dans des conditions définies par un arrêté du ministre de l'intérieur.
+annuelle d'entretien dans des conditions définies par un arrêté     du ministre chargé des transports.
 
 **Liens relatifs à cet article**
 
@@ -9,6 +9,6 @@ annuelle d'entretien dans des conditions définies par un arrêté du ministre d
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 7
