--- a/02. PARTIE REGLEMENTAIRE/Article R3124-1 - 30048537.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3124-1 - 30048537.md
@@ -1,8 +1,8 @@
 # Article R3124-1
 
-Pour l'application de l'article L. 3124-1, l'autorité compétente est celle qui a délivré l'autorisation de stationnement. 
+Pour l'application de l'article L. 3124-1, l'autorité compétente est celle qui a délivré l'autorisation de stationnement.
 
-Pour l'application de l'article L. 3124-2, l'autorité compétente est celle qui a délivré la carte professionnelle.
+Pour l'application de l'article L. 3124-11, l'autorité compétente est celle qui a délivré la carte professionnelle.
 
 **Liens relatifs à cet article**
 
@@ -10,11 +10,10 @@ Pour l'application de l'article L. 3124-2, l'autorité compétente est celle qui
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 8
 
 	**Cite**:
 
-	  - Code des transports - art. L3124-1 (V)
-	  - Code des transports - art. L3124-2 (V)
+	  - Code des transports - art. L3124-1
