--- a/02. PARTIE REGLEMENTAIRE/Article R3124-11 - 30048574.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3124-11 - 30048574.md
@@ -2,18 +2,10 @@
 
 Est puni de l'amende prévue pour les contraventions de la cinquième classe le fait de contrevenir aux dispositions :
 
-- des 2° ou 3° du II de l'article L. 3120-2 ;
-
-- du III de l'article L. 3120-2 ;
+- à l'une des interdictions édictées à l'article L. 3120-2, à l'exception de celles prévues au 1° de son II et au 1° de son
+III,
 
 - de l'article R. 3120-4.
-
-**Nota:**
-
-Conseil d'Etat, décisions N
-  <sup>os</sup> 388213, 388343, 388357 du 9 mars 2016 (ECLI:FR:CESSR:2016:388213.20160309), article 1er : Les dispositions de
-l'article  R. 3124-11 du code des transports en tant qu'elles sanctionnent d'une contravention le fait de contrevenir aux
-dispositions du 1° du III de l'article L. 3120-2 du code des transports sont annulées.
 
 **Liens relatifs à cet article**
 
@@ -21,14 +13,14 @@ dispositions du 1° du III de l'article L. 3120-2 du code des transports sont an
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 8
 
 	**Cite**:
 
-	  - Code des transports - art. L3120-2 (V)
-	  - Code des transports - art. R3120-4 (VD)
+	  - Code des transports - art. L3120-2
+	  - Code des transports - art. R3120-4
 
 	**Cité par**:
 
