--- a/02. PARTIE REGLEMENTAIRE/Article R3131-1 - 33449929.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3131-1 - 33449929.md
@@ -3,12 +3,12 @@
 Les transports de leur personnel organisés pour leurs besoins habituels de fonctionnement par les collectivités publiques,
 par les entreprises et par les associations, sont considérés comme des services privés.
 
+Toutefois, la mise à disposition de l'organisateur, à titre onéreux, de véhicules avec conducteur ne relève pas des services
+privés ; elle ne peut être exécutée que dans les conditions prévues par les titres Ier et II du livre Ier de la présente
+partie.
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Décret n°87-242 du 7 avril 1987 - art. 1 (Ab)
-
-	**Créé par**:
-
-	  - Décret n°2016-1550 du 17 novembre 2016 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 9
