--- a/02. PARTIE REGLEMENTAIRE/Article R3131-3 - 33449933.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3131-3 - 33449933.md
@@ -1,21 +1,13 @@
 # Article R3131-3
 
-Les services privés sont exécutés soit avec des véhicules appartenant à l'organisateur, soit avec des véhicules pris par lui
-en location sans conducteur. La mise à disposition de l'organisateur de véhicules avec conducteur ne peut être assurée que
-par une entreprise inscrite au registre électronique national des entreprises de transport par route. 
+Les services privés sont exécutés :
 
-Les transports mentionnés à l'article R. 3131-2 sont exécutés à titre gratuit.
+1° Soit avec des véhicules appartenant à l'organisateur ;
+
+2° Soit avec des véhicules pris par lui en location sans conducteur.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Décret n°87-242 du 7 avril 1987 - art. 3 (Ab)
-
-	**Créé par**:
-
-	  - Décret n°2016-1550 du 17 novembre 2016 - art.
-
-	**Cite**:
-
-	  - Code des transports - art. R3131-2 (V)
+	  - Décret n°2017-483 du 6 avril 2017 - art. 9
