--- a/02. PARTIE REGLEMENTAIRE/Article R3120-6 - 30048403.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3120-6 - 30048403.md
@@ -2,32 +2,49 @@
 
 Lorsque le conducteur d'un véhicule de transport public particulier utilise ce dernier à titre professionnel, il appose sa
 carte professionnelle sur le pare-brise ou, à défaut, sur le véhicule de telle façon que la photographie soit facilement
-visible de l'extérieur. Cette carte comporte les informations fixées par un arrêté des ministres chargés, respectivement, de
-l'économie et des transports et du ministre de l'intérieur. 
+visible de l'extérieur. Cette carte comporte les informations fixées par un arrêté du ministre chargé des transports.
 
-La carte professionnelle est délivrée à tout candidat à l'exercice de l'activité de conducteur d'un véhicule de transport
-public particulier titulaire d'un permis de conduire de la catégorie autorisant la conduite du véhicule utilisé dès lors
-qu'il remplit les conditions prévues aux articles D. 3121-6, R. 3120-7 et R. 3120-8 ainsi que les conditions d'aptitude
-professionnelle propres au véhicule conduit et définies par le présent titre. 
+La carte professionnelle, ou son équivalent pour les conducteurs relevant de l'article R. 3120-8-1, est délivrée à toute
+personne souhaitant exercer la profession de conducteur d'un véhicule de transport public particulier qui :
+
+1° Est titulaire d'un permis de conduire autorisant la conduite du véhicule utilisé et pour lequel, selon le cas, le délai
+prévu au 3° de l'article L. 3123-1 du présent code ou le délai probatoire prévu à l'article L. 223-1 du code de la route est
+expiré lors de l'entrée initiale dans la profession ou, pour une personne relevant de l'article R. 3120-8-1, est titulaire
+d'un permis qui lui a été délivré depuis plus de trois ans à la date du dépôt de la demande prévue à cet article ;
+
+2° Satisfait à une condition d'aptitude professionnelle conformément, selon le cas, soit à l'article R. 3120-7, soit aux
+articles R. 3122-13 ou R. 3123-2, soit à l'article R. 3120-8-1 ;
+
+3° Satisfait à une condition d'honorabilité professionnelle conformément à l'article R. 3120-8 ou, pour les conducteurs
+relevant de l'article R. 3120-8-1, justifie de garanties d'honorabilité équivalentes.
 
 L'autorité administrative compétente remet la carte professionnelle dans un délai maximum de trois mois suivant la date de la
-demande. A l'appui de sa demande, le conducteur fournit les documents justificatifs fixés par un arrêté des ministres
-chargés, respectivement, de l'économie et des transports et du ministre de l'intérieur. 
+demande. A l'appui de sa demande, le conducteur fournit les documents justificatifs fixés par un arrêté du ministre chargé
+des transports.
 
 Le conducteur restitue sa carte professionnelle lorsqu'il cesse définitivement son activité professionnelle. A défaut d'avoir
-été restituée, elle lui est retirée par l'autorité administrative. 
+été restituée, elle lui est retirée par l'autorité administrative.
 
 Il la restitue également lorsque l'une des conditions auxquelles sa délivrance est subordonnée par les dispositions du
 présent titre cesse d'être remplie. A défaut de restitution, elle lui est retirée après qu'il a été mis à même de présenter
 ses observations écrites sur la décision de retrait envisagée par l'autorité compétente.
 
+**Nota:**
+
+Conformément aux dispositions du II de l'article 14 du décret n° 2017-483 du 6 avril 2017, pendant un an à compter de la
+promulgation de la loi n° 2016-1920 du 29 décembre 2016, l'interdiction, prévue au 1° de l'article R. 3120-6 et au 3° de
+l'article R. 3120-7 du code des transports dans leur rédaction résultant respectivement des 2° et 3° de l'article 2 dudit
+décret, de disposer d'un permis de conduire encore soumis à une période probatoire n'est pas applicable aux conducteurs
+mentionnés au III de l'article 5 de cette même loi s'ils sont titulaires depuis au moins un an du permis de conduire
+correspondant à la catégorie du véhicule concerné.
+
+Les entreprises mentionnées au II du même article 5 souhaitant bénéficier des dérogations prévues au IV du même article
+joignent au dossier d'inscription prévu à l'article R. 3122-1 du code des transports une preuve de l'inscription au registre
+mentionnée à l'article L. 3113-1 du même code.
+
 **Liens relatifs à cet article**
 
 	**Codifié par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
-	**Créé par**:
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
@@ -36,8 +53,6 @@ ses observations écrites sur la décision de retrait envisagée par l'autorité
 	  - Arrêté du 2 février 2016 - art. 7 (Ab)
 	  - Code des transports - art. R3124-12 (V)
 
-	**Cite**:
+	**Modifié par**:
 
-	  - Code des transports - art. R3120-7 (V)
-	  - Code des transports - art. R3120-8 (V)
-	  - Code des transports - art. R3121-6 (V)
+	  - Décret n°2017-483 du 6 avril 2017 - art. 2
