--- a/02. PARTIE REGLEMENTAIRE/Article R3120-8 - 30048407.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3120-8 - 30048407.md
@@ -1,24 +1,20 @@
 # Article R3120-8
 
 Nul ne peut exercer la profession de conducteur de véhicule de transport public particulier si figure au bulletin n° 2 de son
-casier judiciaire, ou à son équivalent pour les non-nationaux, l'une des condamnations suivantes :
+casier judiciaire, ou à son équivalent pour les non-nationaux, l'une des condamnations suivantes : 
 
 1° Une condamnation définitive pour un délit sanctionné en vertu du code de la route par une réduction de la moitié du nombre
-maximal de points du permis de conduire ;
+maximal de points du permis de conduire ; 
 
 2° Une condamnation définitive pour conduite d'un véhicule sans être titulaire du permis de conduire correspondant à la
 catégorie du véhicule utilisé ou pour conduite malgré l'annulation du permis de conduire ou malgré l'interdiction d'obtenir
 la délivrance du permis, ou encore pour refus de restituer son permis de conduire après l'invalidation ou l'annulation de
-celui-ci ;
+celui-ci ; 
 
 3° Une condamnation définitive prononcée par une juridiction, française ou étrangère, à une peine criminelle ou à une peine
 correctionnelle d'au moins six mois d'emprisonnement pour vol, escroquerie, abus de confiance, atteinte volontaire à
-l'intégrité de la personne, agression sexuelle ou infraction à la législation sur les stupéfiants.
-
-**Nota:**
-
-Conformément à l'article 7 IV du décret n° 2014-1725 du 30 décembre 2014, entrent en vigueur le 1er janvier 2017 au I de
-l'article R. 3121-8, les mots : "conformément au deuxième alinéa du I de l'article L. 3121-1-2".
+l'intégrité de la personne, agression sexuelle , trafic d'armes, extorsion de fonds ou infraction à la législation sur les
+stupéfiants.
 
 **Liens relatifs à cet article**
 
@@ -26,9 +22,9 @@ l'article R. 3121-8, les mots : "conformément au deuxième alinéa du I de l'ar
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 2
 
 	**Cité par**:
 
