--- a/02. PARTIE REGLEMENTAIRE/Article R3121-15 - 30048455.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-15 - 30048455.md
@@ -3,7 +3,7 @@
 Sans préjudice de l'article L. 3124-1, les autorisations de stationnement délivrées sont retirées définitivement dans chacun
 des cas suivants :
 
-- après retrait définitif de la carte professionnelle en application de l'article L. 3124-2 ;
+- après retrait définitif de la carte professionnelle en application de l'article L. 3124-11 ;
 
 - à la demande du titulaire ;
 
@@ -18,15 +18,15 @@ catégories, constatée dans les conditions prévues à l'article R. 3121-7 ;
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L3124-1 (V)
-	  - Code des transports - art. L3124-2 (V)
-	  - Code des transports - art. R3121-7 (V)
+	  - Code des transports - art. L3124-1
+	  - Code des transports - art. L3124-11
+	  - Code des transports - art. R3121-7
 
 	**Cité par**:
 
