--- a/02. PARTIE REGLEMENTAIRE/Article R3121-24 - 32278148.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-24 - 32278148.md
@@ -1,20 +1,19 @@
 # Article R3121-24
 
-Le secrétariat général pour la modernisation de l'action publique remplit, à l'égard du registre national de disponibilité
-des taxis, les missions qui lui sont confiées par le deuxième alinéa de l'article L. 3121-11-1 et précisées par la présente
-section, à titre gratuit pour ses utilisateurs. 
+Le ministère chargé des transports remplit, à l'égard du registre national de disponibilité des taxis, les missions prévues à
+l'article L. 3121-11-1 et précisées par la présente section, à titre gratuit pour ses utilisateurs.
 
 Il en assure le développement informatique et le maintien en conditions opérationnelles.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2016-335 du 21 mars 2016 - art. 1
+	  - Décret n°2017-483 du 6 avril 2017 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L3121-11-1 (V)
+	  - Code des transports - art. L3121-11-1
 
 	**Cité par**:
 
