--- a/02. PARTIE REGLEMENTAIRE/Article R3121-4 - 30048429.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-4 - 30048429.md
@@ -1,8 +1,9 @@
 # Article R3121-4
 
-Les autorités compétentes pour délivrer les autorisations de stationnement sont, selon les cas, définies à l'article L.
-2213-33, au 7 de l'article L. 3642-2 et au cinquième alinéa du A du I de l'article L. 5211-9-2 du code général des
-collectivités territoriales.
+Les autorités compétentes pour délivrer les autorisations de stationnement sont, selon le ressort géographique de
+l'autorisation, celles définies à l'article L. 2213-33, au 7 de l'article L. 3642-2, au cinquième alinéa du A du I de
+l'article L. 5211-9-2 du code général des collectivités territoriales ou à l'article L. 6332-2 du présent code, sans
+préjudice, le cas échéant, des mesures de police susceptibles d'être prises par les autorités compétentes.
 
 **Liens relatifs à cet article**
 
@@ -10,15 +11,15 @@ collectivités territoriales.
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 3
 
 	**Cite**:
 
-	  - Code général des collectivités territoriales - art. L2213-33 (V)
-	  - Code général des collectivités territoriales - art. L3642-2 (V)
-	  - Code général des collectivités territoriales - art. L5211-9-2 (M)
+	  - Code général des collectivités territoriales - art. L2213-33
+	  - Code général des collectivités territoriales - art. L3642-2
+	  - Code général des collectivités territoriales - art. L5211-9-2
 
 	**Cité par**:
 
