--- a/02. PARTIE REGLEMENTAIRE/Article R3122-13 - 30048513.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3122-13 - 30048513.md
@@ -1,31 +1,13 @@
 # Article R3122-13
 
-Les conditions d'aptitude professionnelles mentionnées à l'article L. 3122-7 sont constatées :
-
-- soit par la réussite à un examen dans les conditions définies par arrêté des ministres chargés, respectivement, de
-l'économie et des transports et du ministre de l'intérieur ;
-
-- soit par la production d'un titre délivré par un autre Etat membre de l'Union européenne ou par un autre Etat partie à
-l'accord sur l'Espace économique européen ou d'un titre reconnu par l'un de ces Etats, équivalent au certificat attestant de
-la réussite à l'examen mentionné ci-dessus ;
-
-- soit par toute pièce de nature à établir une expérience professionnelle d'une durée minimale d'un an dans des fonctions de
-conducteur professionnel de personnes au cours des dix années précédant la demande de carte professionnelle.
-
-**Nota:**
-
-Conformément à l'article 7 III 3° du décret n° 2014-1725 du 30 décembre   2014, entrent en vigueur à une date fixée par un
-arrêté des ministres   chargés, respectivement, de l'économie et des transports et du ministre   de l'intérieur et au plus
-tard au 1er janvier 2016, les dispositions de  l'article R. 3122-13 du code des transports dans sa rédaction annexée au
-présent décret.
+Les conditions d'aptitude professionnelle mentionnées à l'article L. 3120-2-1 peuvent être constatées par la production de
+toute pièce de nature à établir une expérience professionnelle d'une durée minimale d'un an, à temps plein ou à temps partiel
+pour une durée équivalente, dans des fonctions de conducteur professionnel de transport de personnes au cours des dix années
+précédant la demande de carte professionnelle.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
-	**Créé par**:
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
@@ -38,6 +20,6 @@ présent décret.
 	  - Arrêté du 28 septembre 2016 (Ab)
 	  - Arrêté du 23 décembre 2016 (V)
 
-	**Cite**:
+	**Modifié par**:
 
-	  - Code des transports - art. L3122-7 (V)
+	  - Décret n°2017-483 du 6 avril 2017 - art. 6
