--- a/02. PARTIE REGLEMENTAIRE/Article R3122-9 - 30048501.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3122-9 - 30048501.md
@@ -1,20 +1,27 @@
 # Article R3122-9
 
-Le montant des capacités financières mentionné au deuxième alinéa de l'article L. 3122-4 est de 1 500 euros pour chaque
-véhicule affecté à l'exécution des prestations de transports publics particulier de personnes autre que ceux mentionnés au
-III de l'article R. 3122-1. Il est justifié de ces capacités dans des conditions définies par un arrêté conjoint du ministre
-chargé de l'économie, du ministre de l'intérieur et du ministre chargé des transports. 
+La condition de capacités financières prévue à l'article L. 3122-4 est satisfaite lorsque l'exploitant de voitures de
+transport avec chauffeur, pour chaque véhicule utilisé de façon régulière, démontre :
 
-Le nombre de véhicules pris en compte pour la détermination du montant de la capacité financière exigible est l'ensemble des
-véhicules utilisés de façon régulière par l'exploitant.
+- soit qu'il est propriétaire du véhicule ;
+
+- soit qu'il justifie d'un contrat de location d'une durée d'au moins six mois ;
+
+- soit qu'il présente une garantie financière, d'un montant égal à 1 500 euros par véhicule, accordée soit par un ou
+plusieurs organismes financiers agréés par l'Autorité de contrôle prudentiel et de résolution se portant caution de
+l'entreprise pour le montant exigible, soit par tout établissement de crédit fournissant des prestations ou disposant de
+succursales en France conformément aux articles 
+L. 511-22
+ et 
+L. 511-23
+ du code monétaire et financier, qui est habilité à fournir ce type de service ;
+
+- soit qu'une justification de capacités financières a déjà été produite pour le véhicule conformément à l'un des trois
+alinéas précédents en application d'autres dispositions, notamment celles de l'article R. 3113-31.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
-	**Créé par**:
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
@@ -23,7 +30,11 @@ véhicules utilisés de façon régulière par l'exploitant.
 	  - Arrêté du 28 janvier 2015 (V)
 	  - Arrêté du 28 janvier 2015 - art. 1 (V)
 
+	**Modifié par**:
+
+	  - Décret n°2017-483 du 6 avril 2017 - art. 5
+
 	**Cite**:
 
-	  - Code des transports - art. L3122-4 (V)
-	  - Code des transports - art. R3122-1 (V)
+	  - Code monétaire et financier - art. L511-22
+	  - Code monétaire et financier - art. L511-23
