--- a/02. PARTIE REGLEMENTAIRE/Article R3124-3 - 30048543.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3124-3 - 30048543.md
@@ -1,7 +1,7 @@
 # Article R3124-3
 
-Les manquements à l'article D. 3121-23 sont sanctionnés dans les conditions prévues à l'article R. 113-1 du code de la
-consommation.
+Les manquements aux dispositions mentionnées à l'article R. 3121-22 du présent code sont sanctionnés dans les conditions
+prévues à l'article R. 410-1 du code de commerce.
 
 **Liens relatifs à cet article**
 
@@ -9,11 +9,10 @@ consommation.
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 8
 
 	**Cite**:
 
-	  - Code de la consommation - art. R113-1 (Ab)
-	  - Code des transports - art. R3121-23 (V)
+	  - Code de commerce - art. R410-1
