--- a/02. PARTIE REGLEMENTAIRE/Article R3124-4 - 30048549.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3124-4 - 30048549.md
@@ -1,6 +1,6 @@
 # Article R3124-4
 
-Pour l'application de l'article L. 3124-6, l'autorité compétente est le préfet de département du lieu de commission de la
+Pour l'application de l'article L. 3124-11, l'autorité compétente est le préfet de département du lieu de commission de la
 violation de la réglementation ou, si elle a lieu dans la commune de Paris, le préfet de police.
 
 **Liens relatifs à cet article**
@@ -9,13 +9,13 @@ violation de la réglementation ou, si elle a lieu dans la commune de Paris, le 
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 8
 
 	**Cite**:
 
-	  - Code des transports - art. L3124-6 (V)
+	  - Code des transports - art. L3124-6
 
 	**Cité par**:
 
