--- a/02. PARTIE REGLEMENTAIRE/Article R3131-2 - 33449931.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3131-2 - 33449931.md
@@ -1,43 +1,38 @@
 # Article R3131-2
 
-Sont également considérés comme des services privés lorsqu'ils répondent à leurs besoins habituels de fonctionnement : 
+Sont également considérés comme des services privés lorsqu'ils répondent à leurs besoins habituels de fonctionnement :
 
 1° Les transports organisés par des collectivités territoriales ou leurs groupements pour des catégories particulières
 d'administrés, dans le cadre d'activités relevant de leurs compétences propres, à l'exclusion de tout déplacement à caractère
-touristique ; 
+touristique ;
 
 2° Les transports organisés par les établissements publics départementaux ou communaux accueillant des personnes âgées, les
 établissements d'éducation spéciale, les établissements d'hébergement pour adultes handicapés et personnes âgées et les
 institutions de travail protégé pour les personnes qui y sont accueillies, à l'exclusion de tout déplacement à caractère
-touristique ; 
+touristique ;
 
 3° Sous réserve des articles L. 3111-7 à L. 3111-16, les transports organisés par des établissements d'enseignement en
 relation avec l'enseignement, à condition que ces transports soient réservés aux élèves, au personnel des établissements et,
 le cas échéant, aux parents d'élèves participant à l'encadrement des élèves sont considérés comme des services privés de
-transport routier non urbain de personnes ; 
+transport routier non urbain de personnes ;
 
-4° Les transports organisés par des entreprises pour leur clientèle sous réserve des dispositions de l'article L. 121-35 du
-code de la consommation ; 
+4° Les transports organisés par des entreprises pour leur clientèle ;
 
 5° Les transports organisés par des associations pour leurs membres, sous réserve que ces déplacements soient en relation
 directe avec l'objet statutaire de l'association et qu'il ne s'agisse pas d'une association dont l'objet principal est le
 transport de ses membres ou l'organisation de voyages touristiques.
 
+Ces services sont exécutés à titre gratuit pour les passagers.
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Décret n°87-242 du 7 avril 1987 - art. 2 (Ab)
-	  - Code de l'éducation - art. R213-17 (Ab)
-
-	**Créé par**:
-
-	  - Décret n°2016-1550 du 17 novembre 2016 - art.
+	  - Décret n°2017-483 du 6 avril 2017 - art. 9
 
 	**Cite**:
 
-	  - Code de la consommation - art. L121-35 (Ab)
-	  - Code des transports - art. L3111-7 (VT)
+	  - Code des transports - art. L3111-7
 
 	**Cité par**:
 
