--- a/02. PARTIE REGLEMENTAIRE/Article R3231-5 - 33450151.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3231-5 - 33450151.md
@@ -1,7 +1,7 @@
 # Article R3231-5
 
 Sans préjudice des dispositions du présent code, les entreprises exécutant des transports de matériels de guerre, d'armes, de
-munitions et d'explosifs sont soumises aux dispositions des articles R. 2335-1 à R. 2339-2, R. 2352-1 à R. 2353-16 du code de
+munitions et d'explosifs sont soumises aux dispositions des articles R. 2331-1 à R. 2339-2, R. 2352-1 à R. 2353-16 du code de
 la défense et des articles R. 311-1 à R. 317-14 du code de la sécurité intérieure.
 
 **Liens relatifs à cet article**
@@ -10,9 +10,9 @@ la défense et des articles R. 311-1 à R. 317-14 du code de la sécurité inté
 
 	  - Décret n°2016-1550 du 17 novembre 2016 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2016-1550 du 17 novembre 2016 - art.
+	  - Décret n°2017-909 du 9 mai 2017 - art. 19
 
 	**Cité par**:
 
@@ -20,6 +20,6 @@ la défense et des articles R. 311-1 à R. 317-14 du code de la sécurité inté
 
 	**Cite**:
 
-	  - Code de la défense. - art. R2335-1 (V)
-	  - Code de la défense. - art. R2352-1 (V)
-	  - Code de la sécurité intérieure - art. R311-1 (V)
+	  - Code de la défense. - art. R2331-1 (V)
+	  - Code de la défense. - art. R2352-1
+	  - Code de la sécurité intérieure - art. R311-1
