--- a/02. PARTIE REGLEMENTAIRE/Article R5314-4 - 30031024.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5314-4 - 30031024.md
@@ -1,48 +1,44 @@
 # Article R5314-4
 
-L'instruction comprend les formalités suivantes qui sont effectuées simultanément : 
+L'instruction comprend les formalités suivantes qui sont effectuées simultanément :
 
-1° Consultation du conseil portuaire ; 
+1° Consultation du conseil portuaire ;
 
-2° Consultation des collectivités et des services locaux intéressés ; 
+2° Consultation des collectivités et des services locaux intéressés ;
 
-3° Consultation du concessionnaire, lorsqu'il n'est pas maître d'ouvrage ; 
+3° Consultation du concessionnaire, lorsqu'il n'est pas maître d'ouvrage ;
 
-4° Consultation de la chambre de commerce et d'industrie compétente, lorsqu'elle n'est pas le concessionnaire ; 
+4° (Abrogé) ;
 
 5° Consultation, s'il y a lieu, de la commission nautique dont les conditions de fonctionnement sont fixées par le décret n°
 86-606 du 14 mars 1986 relatif aux commissions nautiques. La grande commission nautique est consultée sur les opérations
 comportant une modification des ouvrages extérieurs du port ou des chenaux d'accès. La commission nautique locale est
-consultée dans les autres cas ; 
+consultée dans les autres cas ;
 
 6° Consultation s'il y a lieu de la commission régionale pour l'amélioration des conditions de débarquement des produits de
-la pêche ; 
+la pêche ;
 
-7° Enquête publique s'il y a lieu. 
+7° Enquête publique s'il y a lieu.
 
 Dans le cas où les travaux envisagés sont soumis aux procédures prévues les articles L. 214-1 à L. 214-6 du code de
-l'environnement, l'instruction est menée simultanément avec celle prévue par les articles R. 214-6 à R. 214-56 du même code. 
+l'environnement, l'instruction est menée simultanément avec celle prévue par les articles R. 214-6 à R. 214-56 du même code.
 
-Le délai imparti aux collectivités, établissements publics, commissions et services consultés en application des 1°, 2°, 3°,
-4° et 5° du présent article pour faire connaître leur avis est de deux mois à compter du jour où ils y sont invités.
-L'absence de réponse dans ce délai vaut avis favorable.
+Le délai imparti aux collectivités, établissements publics, commissions et services consultés en application des 1°, 2°, 3°
+et 5° du présent article pour faire connaître leur avis est de deux mois à compter du jour où ils y sont invités. L'absence
+de réponse dans ce délai vaut avis favorable.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Décret n°86-606 du 14 mars 1986 (V)
-	  - Code de l'environnement - art. L214-1 (V)
-	  - Code de l'environnement - art. R214-6 (V)
+	  - Décret n°86-606 du 14 mars 1986
+	  - Code de l'environnement - art. L214-1
+	  - Code de l'environnement - art. R214-6
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R*122-4, paragraphes II et III (M)
+	  - Décret n°2017-933 du 10 mai 2017 - art. 3
