--- a/02. PARTIE REGLEMENTAIRE/Article R5442-1 - 29814860.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5442-1 - 29814860.md
@@ -1,31 +1,39 @@
 # Article R5442-1
 
-En application de l'article L. 5442-5, les entreprises privées de protection des navires mentionnées à l'article L. 5441-1
-peuvent être autorisées à acquérir, détenir, transporter et mettre à disposition de leurs agents les armes, éléments d'armes
-et munitions suivants : 
+I. - En application de l'article L. 5442-5, les entreprises privées de protection des navires mentionnées à l'article L.
+5441-1 peuvent être autorisées à acquérir, détenir, transporter et mettre à disposition de leurs agents les armes, éléments
+d'armes et munitions suivants :
 
-1° Armes à feu d'épaule : 
+1° Armes à feu d'épaule :
 
 a) A répétition semi-automatique dont le projectile a un diamètre supérieur ou égal à 5,56 mm et inférieur à 12,7 mm classées
-au a du 2° et au 4° de la catégorie B ; 
+au a du 2° et au 4° de la catégorie B ;
 
-b) A répétition à canon lisse munies d'un dispositif de rechargement à pompe classées au f du 2° de la catégorie B ; 
+b) A répétition à canon lisse munies d'un dispositif de rechargement à pompe classées au f du 2° de la catégorie B ;
 
-2° Armes à feu de poing dont le projectile a un diamètre inférieur ou égal à 9 mm classées au 1° de la catégorie B ; 
+2° Armes à feu de poing dont le projectile a un diamètre inférieur ou égal à 9 mm classées au 1° de la catégorie B ;
 
-3° Armes à impulsion électrique permettant de provoquer un choc électrique à distance classées au 6° de la catégorie B ; 
+3° Armes à impulsion électrique permettant de provoquer un choc électrique à distance classées au 6° de la catégorie B ;
 
 4° Générateurs d'aérosols lacrymogènes ou incapacitants d'une capacité inférieure ou égale à 100 ml classés au b du 2° de la
-catégorie D ; 
+catégorie D ;
 
 5° Munitions des armes mentionnées aux 1° à 3° du présent article ainsi que les munitions avec projectile contenant un
 mélange s'enflammant au contact de l'air classées au 2° de la catégorie A2.
 
+II. - Pour répondre à une menace au sein même du bord, sont interdites d'utilisation :
+
+1° Les armes mentionnées au a du 1° du I autres que celles dont le diamètre du projectile est égal à 9 mm ;
+
+2° Les armes mentionnées au b du 1° du I ;
+
+3° Les munitions avec projectile contenant un mélange s'enflammant au contact de l'air mentionnées au 5° du I.
+
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1416 du 28 novembre 2014 - art. 1
+	  - Décret n°2017-944 du 10 mai 2017 - art. 2
 
 	**Cité par**:
 
