--- a/02. PARTIE REGLEMENTAIRE/Article R5442-6 - 29814870.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5442-6 - 29814870.md
@@ -1,31 +1,51 @@
 # Article R5442-6
 
-I.-Dès avant l'arrivée dans la zone mentionnée à l'article L. 5442-1, le capitaine du navire examine avec le chef de l'équipe
-de protection les mesures permettant d'assurer la protection du navire et les règles relatives au stockage et à l'usage des
-armes. En tant que de besoin, ces mesures sont arrêtées par le capitaine, sur proposition du chef de l'équipe de protection. 
+I.-Dès que possible après l'embarquement de l'équipe privée de protection, le capitaine du navire examine avec le chef de
+l'équipe de protection les mesures permettant d'assurer la protection du navire et les règles relatives au stockage et à
+l'usage des armes. En tant que de besoin, ces mesures sont arrêtées par le capitaine, sur proposition du chef de l'équipe de
+protection. 
 
 Le capitaine porte à la connaissance de l'équipe les paramètres de sécurité, de sûreté et d'exploitation propres au navire. 
 
-II.-En dehors des zones mentionnées à l'article L. 5442-1, les armes, éléments d'armes et les munitions sont stockés à bord
-du navire dans des locaux séparés et fermés à clé, dont la garde incombe au chef de l'équipe de protection. 
+II.-Dans les cas prévus aux I et II de l'article L. 5442-1, au-delà de la mer territoriale des Etats, le capitaine décide,
+après avis du chef de l'équipe de protection du navire et analyse du risque, que les armes sont : 
 
-III.-Dans les zones mentionnées à l'article L. 5442-1 : 
+1° Soit démontées et stockées dans un local fermé à clé, distinct de celui, également fermé à clé, où sont conservés les
+éléments d'armes amovibles et les munitions ; 
 
-1° La vérification par les agents de protection du bon fonctionnement des armes et l'entraînement au tir nécessitent, au cas
-par cas, l'autorisation préalable du capitaine ; 
+2° Soit non démontées mais dotées d'un dispositif technique de sécurisation et séparées de leurs munitions, elles-mêmes
+stockées dans un coffre fermé à clé ; 
 
-2° La décision d'armer les agents de protection en vue d'assurer leur activité de protection du navire est prise par le
-capitaine.
+3° Soit approvisionnées et portées par les membres de l'équipe privée de protection. 
+
+III.-Dans les eaux territoriales et les eaux intérieures maritimes françaises et des Etats étrangers, les armes, éléments
+d'armes et les munitions sont : 
+
+1° En principe, stockés dans les conditions prévues au 1° du II ; 
+
+2° Stockés ou remis aux agents dans les conditions prévues aux 1° à 3° du II lorsque : 
+
+a) Dans les eaux territoriales et les eaux intérieures maritimes françaises, l'activité privée de protection des navires y
+est autorisée conformément au III de l'article L. 5442-1 ; 
+
+b) Dans les eaux territoriales et les eaux intérieures maritimes d'un Etat étranger, un accord international y autorise
+l'exercice de l'activité privée de protection des navires et ne prévoit pas de dispositions spécifiques relatives au stockage
+des armes à bord des navires. 
+
+IV.-La vérification, par les agents de l'entreprise privée de protection, du bon fonctionnement des armes et l'entraînement
+au tir nécessitent, au cas par cas, l'autorisation préalable du capitaine. 
+
+V.-La sécurité et la garde des armes sont placées sous la responsabilité du chef de l'équipe de protection.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1416 du 28 novembre 2014 - art. 1
+	  - Décret n°2017-944 du 10 mai 2017 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L5442-1
+	  - Code des transports - art. L5442-1 (V)
 
 	**Cité par**:
 
