--- a/02. PARTIE REGLEMENTAIRE/Article R5784-1 - 29815227.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5784-1 - 29815227.md
@@ -5,54 +5,66 @@ dispositions du livre IV de la présente partie mentionnées dans la colonne de 
 indiquée dans la colonne de droite du même tableau : 
 
 <table>
-    <tbody>
-      <tr>
-        <th>DISPOSITIONS APPLICABLES 
-
-</th>
-        <th>DANS LEUR RÉDACTION 
-
-</th>
-      </tr>
-      <tr>
-        <td align="justify">
+  <tbody>
+    <tr>
+      <th>DISPOSITIONS APPLICABLES </th>
+      <th>DANS LEUR RÉDACTION </th>
+    </tr>
+    <tr>
+      <td align="justify">
 R. 5411-1 à R. 5413-5 
 
 R. 5421-1 
 
 R. 5422-6 à R. 5423-28 
-
 </td>
-        <td align="justify">
+      <td align="justify">
 
 Résultant du décret n° 2016-1893 du 28 décembre 2016 
 
 </td>
-      </tr>
-      <tr>
-        <td align="justify">
-R. 5442-1 et R. 5442-2 à R. 5442-6 
+    </tr>
+    <tr>
+      <td align="justify">
+R. 5442-1 
+</td>
+      <td align="justify">
+
+Résultant du décret n° 2017-944 du 10 mai 2017 
 
 </td>
-        <td align="justify">
-
-Résultant du décret n° 2014-1416 du 28 novembre 2014
-
+    </tr>
+    <tr>
+      <td align="justify">
+R. 5442-2 à R. 5442-5 
 </td>
-      </tr>
-    </tbody>
-  </table>
+      <td align="justify">Résultant du décret n° 2014-1416 du 28 novembre 2014 </td>
+    </tr>
+    <tr>
+      <td align="justify">
+R. 5442-6 et R. 5442-12 à R. 5442-16
+</td>
+      <td align="justify">Résultant du décret n° 2017-944 du 10 mai 2017</td>
+    </tr>
+  </tbody>
+</table>
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
 	  - Décret n°2014-1416 du 28 novembre 2014 (V)
-	  - Décret n°2016-1893 du 28 décembre 2016 (V)
-	  - Code des transports - art. R5411-1 (V)
-	  - Code des transports - art. R5421-1 (V)
-	  - Code des transports - art. R5422-6 (V)
+	  - Décret n°2016-1893 du 28 décembre 2016
+	  - Décret n°2017-944 du 10 mai 2017 (V)
+	  - Code des transports - art. R5411-1
+	  - Code des transports - art. R5421-1
+	  - Code des transports - art. R5422-6
 	  - Code des transports - art. R5442-1 (V)
+	  - Code des transports - art. R5442-12 (V)
+	  - Code des transports - art. R5442-16 (V)
+	  - Code des transports - art. R5442-2 (V)
+	  - Code des transports - art. R5442-5 (V)
+	  - Code des transports - art. R5442-6 (V)
 
 	**Codifié par**:
 
@@ -60,4 +72,4 @@ Résultant du décret n° 2014-1416 du 28 novembre 2014
 
 	**Modifié par**:
 
-	  - Décret n°2016-1893 du 28 décembre 2016 - art.
+	  - Décret n°2017-944 du 10 mai 2017 - art. 5
